      Graham) #105

   *  Removing Python 2.6, 3.2, and 3.3 testing (PR from Tim Graham) #115, #116

   *  Removing unnecessary parens in return statements (PR from Tim Graham)
      #113

   *  Remove unused _has_unicode/_str_cls vars (PR from Tim Graham) #111

   *  Add flake8 testing and cleanups (PR from Tim Graham, cleanups from Sean
      Reifschneider) #112

Fri, 27 May 2016 13:44:55 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.58 release.

   *  Fixing a performance regression in v1.54 in Python 2, using cPickle again.
      Patch by edmorley #86

   *  Support for "stats slabs".
      Patch by grg350 #93

   *  get_stats encoding fix.
      Patch by bartTC #91

   *  Pin Six version to >= 1.4
      Patch by pipermirriam #81

   *  setup.py build process pulls version from memcached.py
      Patch by dieselmachine #72

   *  delete() and delete_multi() now default the "time" argument to None,
      since the protocol doesn't allow a time in some implementations.
      Patch by oremj #27

Fri, 31 Jul 2015 11:38:25 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.57 release.

   * Fix for #75 and #76, mc.set(key, False) results in "ValueError:
     invalid literal for int()".  Reported by Carlos Sanchez on github.

Sun, 26 Jul 2015 14:44:20 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.56 release.

   *  More patches for python3 from Victor Stinner #67.  Thanks!

   *  Tests moved out into their own unittest testcases.
      Patch by Jeremy Thurgood.

   *  Adding support for pluggable compressors.  Patch by cactus on github.

   *  Adding support for "noreply".  Patch by cactus on github.

   *  Allowing empty key in _multi() calls.  Suggested by sergio97 on github.

Sun, 21 Sep 2014 13:41:30 -0600  Sean Reifschneider  <jafo@tummy.com>

   *  1.54 release.

   *  Numerous patches to attempt to get Python 3 working, but
      tests are still failing under Python 3, so this code is not ready
      yet.
